syntax = "proto3";

package user_service;

service UserService {
  rpc VerifyUser (UserRequest) returns (UserResponse);
  rpc removeInterest(UserRequest) returns (UserResponse);
}

message UserRequest {
  string email = 1;
}

message UserResponse {
  bool exists = 1;
}

message remove {
  bool success = 1;
}